[package]
name = "busy"
version = "0.1.0"
authors = ["Steve Loveless <steve.loveless@gmail.com"]
edition = "2018"

[dependencies]
busy-conveyor = { path = "conveyor" }
config = { version = "0.9", default-features = false, features = ["toml"] }
failure = "0.1"
futures = "0.1"
hyper = "0.12"
lazy_static = "1.2"
log = "0.4"
pretty_env_logger = "0.3"
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = ["conveyor", "dummy"]
